Actualizando el estilo del proyecto a partir de un nuevo layout. Agrego imagenes a los botones y nuevo posicionamiento de los links

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 cabo buenas ideas. ¿Hablamos?
             </p>
             <div class="presentacion__enlaces">
-            <a class="presentacion__enlaces__link" href="https://www.instagram.com/">Instagram</a>
-            <a class="presentacion__enlaces__link" href="https://www.github.com/">GitHub</a>
+                <h2 class="presentacion__enlaces__subtitulo">Accede a mis redes:</h2>
+            <a class="presentacion__enlaces__link" href="https://www.instagram.com/"><img src="./assets/instagram.png" alt="Icono de instagram"> Instagram</a>
+            <a class="presentacion__enlaces__link" href="https://www.github.com/"><img src="./assets/github.png" alt="Icono de Git HUb"> GitHub</a>
+            <a class="presentacion__enlaces__link" href="https://twitch.tv/"><img src="./assets/twitch.png" alt="Icono de Twich"> Twitch</a>
             </div>
         </section>
         <img src="Imagem.png" alt="Imagen de Ana Garcia trabajando en un computador">
